@@ -184,7 +184,7 @@ AUTO_COMMENT=Yes
 
 MANGLE_ENABLED=Yes
 
-ROUTE_BALANCE=No
+USE_DEFAULT_RT=No
 
 ###############################################################################
 #			P A C K E T   D I S P O S I T I O N
