@@ -366,7 +366,7 @@ sub initialize() {
 		AUTO_COMMENT => undef ,
 		MANGLE_ENABLED => undef ,
 		NULL_ROUTE_RFC1918 => undef ,
-		ROUTE_BALANCE => undef ,
+		USE_DEFAULT_RT => undef ,
 		#
 		# Packet Disposition
 		#
@@ -1913,7 +1913,7 @@ sub get_configuration( $ ) {
     default_yes_no 'MARK_IN_FORWARD_CHAIN'      , '';
     default_yes_no 'MANGLE_ENABLED'             , 'Yes';
     default_yes_no 'NULL_ROUTE_RFC1918'         , '';
-    default_yes_no 'ROUTE_BALANCE'              , '';
+    default_yes_no 'USE_DEFAULT_RT'             , '';
     
     $capabilities{XCONNMARK} = '' unless $capabilities{XCONNMARK_MATCH} and $capabilities{XMARK};
 
