@@ -4,7 +4,7 @@ Changes in 4.2.0-Beta3
 
 2)  Don't assume -f in /etc/init.d/shorewall-lite
 
-3)  Implement ROUTE_BALANCE
+3)  Implement USE_DEFAULT_RT
 
 Changes in 4.2.0-Beta2
 
