@@ -92,17 +92,22 @@ Other Changes in Shoreall 4.2.0 Beta 3.
     default for '/etc/init.d/shorewall start'. Beginning with 4.0.13
     and 4.2.0-Beta3, this is also true for Shoreawall-lite.
 
-2)  A new ROUTE_BALANCE option has been added to shorewall.conf. When
+2)  A new USE_DEFAULT_RT option has been added to shorewall.conf. When
     set to 'Yes', it causes the Shorewall multi-ISP feature to create
     a different set of routing rules which are resilient to changes in
     the main routing table. Such changes can occur for a number of
     reasons,  VPNs going up and down being an example.
 
+    The USE_DEFAULT_RT option is currently classified as
+    EXPERIMENTAL. As a consequence, if you have a problem with it, the
+    Shorewall support team may not be able to supply you with a
+    solution.
+
     The idea is to send packets through the main table prior to
     applying any of the Shorewall-generated routing rules. So changes
     to the main table will affect the routing of packets by default. 
 
-    When ROUTE_BALANCE=Yes:
+    When USE_DEFAULT_RT=Yes:
 
     a) Both the DUPLICATE and the COPY columns in the providers file
        must remain empty (or contain "-").
